# autotech_ai_scantool

./: .gitignore  README.md  build.bat  gateway_app.spec  protocol.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
elm327_gateway/: __init__.py  __main__.py  app.py  auto_update.py  autodetect.py  bidirectional.py  calibrations.py  can_sniffer.py  connection.py  data_logger.py  dbc_decoder.py  dtc_enhanced.py  live_dashboard.py  mode06.py  module_maps.py  oem_dids.py  pids.py  protocol.py  reverse_tunnel.py  server.py  service.py  session.py  test_procedures.py  topology_map.py  vin_decoder.py
elm327_gateway/data/: scan_tool_data.db
